<resources>
    <string name="app_name">FASE</string>

    <string name="Discrimination">Discrimination</string>
    <string name="Taxes">Taxes</string>
    <string name="Economy">Economy</string>
    <string name="Education">Education</string>
    <string name="Environment">Environment</string>
    <string name="ForeignAffairs">Foreign Affairs</string>
    <string name="GunControl">Gun Control</string>
    <string name="Immigration">Immigration</string>
    <string name="Abortion">Abortion</string>
    <string name="SocialSecurity">Social Security</string>
    <string name="Healthcare">Healthcare</string>
    <string name="platform">Our Platform</string>


    <string name="disinfo">Our party feels that these minority rights movements, and those unlisted, are in fact protected under the constitution. So long as the members do not engage in any harmful activities or violence, then they are fine and should not be regulated. The government should listen to their concerns and decide whether or not action should be taken.</string>
    <string name="Tinfo">Our party feels that government spending on the military should be decreased and the percent taken should be distributed among International Affairs, Environment and Energy, and Science. Taxation in the United States is relatively low as compared to other developed countries, and the average tax rate is only 14%.</string>
    <string name="Ecinfo">Currently, the health of the economy is good. Unemployment is very low. There is not much that we can currently do to make it better, so we should keep doing what we are now. The government should only be somewhat involved, just to set regulations and restrictions on business trade, and practices. It should be illegal to trade with countries that practice poor business laws, such as child labor laws, using chemicals that damage the environment, etc. Businesses that originated from America should be forced to follow business laws in america, rather than the country that they reside in.</string>
    <string name="edinfo">In the US education has more focus on having a national standard(Common Core) that give more thought to people being a jack of all trades rather than focusing on a particular skill that the person themself would enjoy. The funding for schools come from both non-profit organizations and the Gov’t. The goal of Education SHOULD be to give the students the tools and skills necessary to pursue the career that they choose. The most effective way to prepare the students, in our humble opinion, is to use common core from 1st through 4th grade then over the course of 5th grade begin to stress the importance of finding a career. Following 5th grade is when the students should be given classes to help them prepare for their carrier. College should be free so that more people can be allowed to get that education, but College cannot be free. The cost for all of the supplies needed and for the salaries for the teachers need to come from somewhere. If it doesn’t come from the students then taxes will have to be raised</string>
    <string name="eninfo">Natural gas, public transit, reduce emissions, if possible don\'t use a car. Yes, climate change does exist, and it is mostly man made, but not completely. We strongly advocate for renewable resources, and reduce oil and use reusable/recyclable materials instead of plastic. We should preserve our national parks and wildlife - it helps keep our atmosphere intact and clean.  We would have to lobby a lot and attack major companies that benefit from using environmentally hazardous resources</string>
    <string name="fainfo">We need to continue doing what we are doing, and keep a close tab on foreign wars/conflicts. Our goal is to bring the world together, but we will not accept efforts against us. ISIS, or Islamic State of Iraq, is a terrorist threat that should be abolished, as it sets back our advancements in uniting the world and thus achieving more. Our current efforts to deal with Syria and Russia are right where they should be. We think we should keep going with peace agreements with North Korea. The US should stay in NATO so that we can help other nations and so that we can have a system of support in our times of need. However, other countries should pay the same amount we do into NATO.</string>
    <string name="gcinfo">Our current policy is not very strict, but we believe there should more rigorous background checks. You should only be allowed to carry a firearm if there is a probable cause, like if you live in an area with a high amount of crime. Each state should have their own rules, but the Federal government should provide their own guidelines for the states to follow.</string>
    <string name="iminfo">Legal immigration is when those who want to become a citizen will go through all of the necessary procedures. An illegal immigrant will try to sneak in or try to get in without doing all of the work. Illegal immigrants should be deported. Deferred Action for Childhood Arrivals is an American immigration policy that allows some individuals with unlawful presence in the United States after being brought to the country as children to receive a renewable two-year period of deferred action from deportation and become eligible for a work permit in the U.S. We think this program only worsens the problem of illegal immigration. We believe there should be a wall, as it will hopefully abolish illegal immigration. We think the naturalization process should remain where it is.</string>
    <string name="anifo">Abortion should not be done unless the mother or child is in danger, or in cases of rape. (in other words, medically necessary cases.) However, it is not our place to dictate what people want to do with their bodies, as the laws for abortion are already in place. In school children should be warned of the problems that can come from having sexual relations. Abstinence should be encouraged, and birth control should be readily available at all times.</string>
    <string name="ssinfo">The United States Social Security Administration is an independent agency of the U.S. federal government that administers Social Security, a social insurance program consisting of retirement, disability, and survivors\' benefits. you must be 61 and 9 months to receive social security. we believe that to ensure we get SS benefits, DON\’T LET THE GOVERNMENT USE IT. Social security benefits come from taxing the people, and if the government uses it, there is no way to ensure that they will ever get it back.</string>
    <string name="hcinfo">The Patient Protection and Affordable Care Act, often shortened to the Affordable Care Act or nicknamed Obamacare, is a United States federal statute enacted by the 111th United States Congress and signed into law by President Barack Obama on March 23, 2010. Our party strongly believes in the importance of having affordable health care, and insurance, and it is necessary for everyone to have health care insurance if we want hospitals and doctors to survive.

All children should have access to healthcare. Once you turn 18, you have to pay for your own healthcare, and if you don’t, then you are not entitled to anything more than basic life saving care. The United States should not have universal healthcare, but hospitals should be allowed to turn away patients that don’t have it. Everytime a hospital cares for a patient without insurance, they lose money, and if they lose too much money, they would close down.

Medicare is a national health insurance program in the United States, begun in 1966 under the Social Security Administration and now administered by the Centers for Medicare and Medicaid Services. It provides health insurance for Americans aged 65 and older. We will try to lobby and prevent the government from spending the money on other things, like military.
</string>


</resources>
